CHANGE LOG: NUKEVIET CMS
http://nukeviet.vn

NUKEVIET 4.0.29 (No release)
- Update module Contact
- Update module Users.
- Change Admin-toolbar
- Update variables for javascript: 
	 nv_siteroot -> nv_base_siteurl
	 nv_sitelang -> nv_lang_data
- Update Language Français, thank Nguyễn Phú Thành.
- Update CKEditor 4.5.3
- Class resquest: Fix block tag
- Class image:  support image bmp 
- Module siteinfo: fix check chmod dir
- Seotools: Sorts siteDiagnostic
- Fix error "ASSETS_DIR"
- Fix sample data English
- Add variable $blockID
- Theme mobile: fix comment
- Theme admin: update font size
- Module news: Fix news detail, Fix rpc ping
- Fix and update something...


NUKEVIET 4.0.22 (Open beta 8)
- Restructuring of NukeViet directory
- Add Language Français, thank Nguyễn Phú Thành.
- Add module free_content
- Update theme default, mobile_default
- Change the sample data into the module
- Add a management area for google fonts
- Update SSL setting
- Optimize in-line javascript in tpl
- Optime social sharing
- Move config statistics to module webtools
- Move javascript from module to theme
- Remove code zip file css, javascript.
- config: Recorded of system error
- Install: check collation database
- fix rewrite for XAMPP 5.6.8 (PHP 5.6.8)
- Add QR-code block
- Remove shadowbox library
- Update CKEditor 4.5.2
- Update oAuthLib
- Update FontAwesome 4.4.0

NUKEVIET 4.0.21 (Open beta 7)
- Add data-show for javascript
- Fix module comment
- Update block global.slimmenu for default menu
- Update getbootstrap v3.3.5
- Remove module Download
- fix Redirect link
- theme default: resize the left column
- module users: Rewrite for function changequestion
- Fix and update something...

NUKEVIET 4.0.20 (No release)
- Add class Browser-Detect
- remove function: nv_check_bot, nv_getBrowser, nv_getOs
- Add Autoload Class
- Update PHPMailer 5.2.10
- update class optimezer.class
- Remove do not use file
- Add data-show="after" for <script type="text/javascript"  ...